
  - [bug] Fixed bug whereby TypeDecorator would
    return a stale value for _type_affinity, when
    using a TypeDecorator that "switches" types,
    like the CHAR/UUID type.

  - [bug] Fixed bug whereby "order_by='foreign_key'"
    option to Inspector.get_table_names 
    wasn't implementing the sort properly, replaced
    with the existing sort algorithm

- pyodbc
   - [bug] pyodbc-based dialects now parse the 
     pyodbc accurately as far as observed
     pyodbc strings, including such gems
     as "py3-3.0.1-beta4" [ticket:2318]

- postgresql
   - [bug] Postgresql dialect memoizes that an ENUM of a 
     particular name was processed
     during a create/drop sequence.  This allows
     a create/drop sequence to work without any
     calls to "checkfirst", and also means with
     "checkfirst" turned on it only needs to 
     check for the ENUM once.  [ticket:2311]

   - [feature] Added create_type constructor argument 
     to pg.ENUM.  When False, no CREATE/DROP or 
     checking for the type will be performed as part
     of a table create/drop event; only the 
     create()/drop)() methods called directly
     will do this.  Helps with Alembic "offline"
     scripts.

- mssql
  - [bug] repaired the with_hint() feature which
    wasn't implemented correctly on MSSQL - 
    usually used for the "WITH (NOLOCK)" hint
    (which you shouldn't be using anyway ! 
    use snapshot isolation instead :) )
    [ticket:2336]

  - [bug] use new pyodbc version detection for
    _need_decimal_fix option, [ticket:2318]

- mysql
  - [bug] Unicode adjustments allow latest pymysql 
    (post 0.4) to pass 100% on Python 2.

- examples
   - [bug] Fixed bug in history_meta.py example where
     the "unique" flag was not removed from a 
     single-table-inheritance subclass which 
     generates columns to put up onto the base.

0.7.3
=====
- general
   - Adjusted the "importlater" mechanism, which is
     used internally to resolve import cycles,